--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_PORT=5432
 DB_HOST=localhost
 DB_NAME=godb
 DB_USER=postgres
-DB_PASSWD=postgres
+DB_PASSWORD=postgres
 
 SERVER_PORT=8080
 TIMEOUT=4
