--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 
 SERVER_PORT=8080
-TIMEOUT=4
-IDLE_TIMEOUT=30
-CONFIG_PATH=./config/.env
+TIMEOUT=4s
+IDLE_TIMEOUT=30s
+CONFIG_PATH=.env
