--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,30 @@ version: '3.9'
 
 services:
   postgres:
-    conteiner_name: postgres_godb
+    container_name: postgres_godb
+    command: -p 5432
     image: postgres:14-alpine
-    ports:
-      - 5432:5432
     volumes:
       - ~/apps/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=godb
- 
+      - DATABASE_HOST=localhost
+    expose:
+      - 5432
+
   app:
+    container_name: go_webapp
     build:
       context: .
       dockerfile: docker/api/Dockerfile
 
     restart: always
-    build: .
     ports:
       - 8000:8000
     restart: on-failure
     volumes:
       - .:/app
     depends_on:
-      - postgresdb
+      - postgres
