--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,33 @@ version: '3.9'
 
 services:
   postgres:
-    container_name: postgres_godb
+    image: postgres:15
+    container_name: db_app
     command: -p 5432
-    image: postgres:14-alpine
-    volumes:
-      - ~/apps/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=godb
-      - DATABASE_HOST=localhost
-    expose:
-      - 5432
 
   app:
     container_name: go_webapp
     build:
       context: .
       dockerfile: docker/api/Dockerfile
-
-    restart: always
     ports:
       - 8000:8000
-    restart: on-failure
-    volumes:
-      - .:/app
     depends_on:
       - postgres
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - ENV=local
+      - DB_NAME=godb
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+      - SERVER_ADDR=localhost:8000
+      - SERVER_PORT=8000
+      - TIMEOUT=4s
+      - IDLE_TIMEOUT=30s
+      - CONFIG_PATH=.env
+
