--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:14
     container_name: db_app
     command: -p 5432
     env_file:
-      - .env.development
+      - .env-dev
   app:
     container_name: go_webapp
     build:
@@ -17,4 +17,4 @@ services:
     depends_on:
       - postgres
     env_file:
-      - .env.development
+      - .env-dev
