--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 ENV=local
-DB_PORT=5432
-DB_HOST=localhost
-DB_NAME=godb
-DB_USER=postgres
-DB_PASSWORD=postgres
+POSTGRES_PORT=5432
+POSTGRES_HOST=localhost
+POSTGRES_NAME=godb
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 
 SERVER_ADDR=localhost:8000
 SERVER_PORT=8000
