--- a/enviroment/dev/.env
+++ b/enviroment/dev/.env
@@ -1,6 +1,7 @@
-ENV=local
+ENV=dev
+
 POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+POSTGRES_HOST=posgres
 POSTGRES_NAME=godb
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
@@ -9,4 +10,4 @@ SERVER_ADDR=localhost:8000
 SERVER_PORT=8000
 TIMEOUT=4s
 IDLE_TIMEOUT=30s
-CONFIG_PATH=.env
+CONFIG_PATH=./enviroment/dev/.env
