--- a/enviroment/local/.env
+++ b/enviroment/local/.env
@@ -1,6 +1,6 @@
-ENV=dev
+ENV=local
 POSTGRES_PORT=5432
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_NAME=godb
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
@@ -9,5 +9,4 @@ SERVER_ADDR=localhost:8000
 SERVER_PORT=8000
 TIMEOUT=4s
 IDLE_TIMEOUT=30s
-CONFIG_PATH=.env-dev
-
+CONFIG_PATH=./enviroment/local/.env
