Fix: fixed .env for dev

--- a/enviroment/dev/.env
+++ b/enviroment/dev/.env
@@ -1,7 +1,6 @@
 ENV=dev
-
 POSTGRES_PORT=5432
-POSTGRES_HOST=posgres
+POSTGRES_HOST=postgres
 POSTGRES_NAME=godb
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
