--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   postgres:
     image: postgres:14
     container_name: db_app
-    command: -p 5432
+    ports:
+      - 5431:5432
     env_file:
       - enviroment/dev/.env
   app:
